--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -5,12 +5,75 @@
     android:orientation="vertical">
 
     <com.dry.webvideoplayer.PlayActivityTitle
+        android:id="@+id/play_activity_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <VideoView
-        android:id="@+id/video_view"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:clickable="true">
+
+        <VideoView
+            android:id="@+id/video_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:id="@+id/video_button_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
+            android:orientation="horizontal">
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="#00000000"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/last_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="#00000000"
+                android:src="@drawable/ic_last2_48dp"
+                android:textAllCaps="false" />
+
+            <ImageButton
+                android:id="@+id/play_pause_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="#00000000"
+                android:src="@drawable/ic_pause2_48dp"
+                android:textAllCaps="false" />
+
+            <ImageButton
+                android:id="@+id/next_button"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:background="#00000000"
+                android:src="@drawable/ic_next2_48dp"
+                android:textAllCaps="false" />
+
+            <ImageButton
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:background="#00000000"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+    </FrameLayout>
+
 
 </LinearLayout>
